(PC-16597)[PRO] fix: resolve input size problem when name is too long

--- a/pro/src/components/pages/Offerers/Offerer/VenueV1/fields/PricingPoint/PricingPoint.module.scss
+++ b/pro/src/components/pages/Offerers/Offerer/VenueV1/fields/PricingPoint/PricingPoint.module.scss
@@ -20,7 +20,8 @@
   margin-top: rem.torem(10px);
 
   .select > select {
-    min-width: rem.torem(550px);
+    width: rem.torem(550px);
+    text-overflow: ellipsis;
   }
   .space-left {
     margin-left: rem.torem(16px);
